<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormActivity"
    android:padding="10dp"
    android:background="@drawable/bgforest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@android:drawable/ic_menu_gallery"
            android:id="@+id/imgForm"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="right">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="35dp"
                android:textStyle="bold"
                android:id="@+id/tvFormName"
                android:text="@string/form_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:id="@+id/tvFormType"
                android:text="@string/form_type" />

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/etFormDescription"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="top|left"
        android:textSize="15dp"
        android:background="@drawable/text_area"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/hint_description"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSaveForm"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_primary"
            android:textStyle="bold"
            android:textSize="20dp"
            android:drawableLeft="@android:drawable/ic_input_add"
            android:text="@string/btn_save_form" />
    </FrameLayout>

</LinearLayout>